fix popover padding collapse in safari

--- a/client/assets/styles/scss/popover/popover-branch-menu.scss
+++ b/client/assets/styles/scss/popover/popover-branch-menu.scss
@@ -4,7 +4,7 @@
   width: 100%;
 
   .popover-content.popover-content {
-    max-height: 690px;
+    max-height: 600px;
     min-height: 105px;
     overflow-y: auto;
 
